--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Hello, World!</h1>
     <p>This is a simple barebones HTML page.</p>
-    <a src="./study_app/index.html">study tool</a>
+    <a href="./study_app/index.html">study tool</a>
 </body>
 </html>
 
