--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>My Barebones HTML Page</title>
+    <title>Brian Huang page</title>
+
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>This is a simple barebones HTML page.</p>
     <a href="./study_app/index.html">study tool</a>
 </body>
 </html>
