added oldp roject

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 
 </head>
 <body>
+    <div>
     <a href="./study_app/index.html">study tool</a>
+    <br>
+    <a href="./CMP239_Project/index.html">Web dev final project</a>
+    </div>
 </body>
 </html>
 
