--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <a href="./study_app/index.html">study tool</a>
     <br>
     <a href="./CMP239_Project/index.html">Web dev final project</a>
+    <br>
+    <a href="./productivity/index.html">temp</a>
     </div>
 </body>
 </html>
