--- a/PreCollegeGuide/index.html
+++ b/PreCollegeGuide/index.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <h1>Guide to Pre-College Programs</h1>
+        <h3>By: Brian Huang</h3>
     </header>
     <main>
         <div id="wrapper">
