--- a/study_app/index.html
+++ b/study_app/index.html
@@ -50,7 +50,7 @@
         </div>
        
         <div id="hide">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/jfKfPfyJRdk?si=2JgTUfyLFsAMtuqp&autoplay=1" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=ygedg03NpUQ" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     
         </div>
     </div>
