--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <div>
-    <a href="./study_app/index.html">study tool</a>
+    <!--<a href="./study_app/index.html">study tool</a> -->
+        :D
     <br>
     <br>
     </div>
