--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
 
 </head>
 <body>
+    sitemap :)
     <div>
-    <!--<a href="./study_app/index.html">study tool</a> -->
-        :D
+    <a href="./study_app/index.html">broken timer</a>
     <br>
+    <a href="./PreCollegeGuide/index.html">engl101</a>
+    <br>
+    <a href="./productivity/index.html">:D</a>
+    <br>
+    <a href = "./lit_analysis.pdf">something somethign critique</a>
+    <br>
+    <a href="./lin_alg_game_theory.pdf">math401</a>
+    <br>
+    <a href= "./sonare/index.html">hci</a>
     <br>
     </div>
 </body>
