--- a/sonare/index.html
+++ b/sonare/index.html
@@ -44,7 +44,7 @@
 										<header class="major">
 											<h2>What is Sonare?</h2>
 										</header>
-										<p>Sonare is a </p>
+										<p>Sonare is a comprehensive platform that not only tracks individual progress but also allows for mixing tracks, sharing music sheets, and community engagement.</p>
 										<ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
@@ -57,6 +57,7 @@
 							<section id="first" class="main special">
 								<header class="major">
 									<h2>About</h2>
+                                    <h3>Meet the team</h3>
 								</header>
 								<ul class="features">
 									<li>
@@ -83,7 +84,7 @@
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Slides</h2>
-									<p>Our HCI2 project presentation slides documenting our design process</p>
+									<p>Project slides documenting our design process</p>
 								</header>
 								<div class="grid-container">
 									<ul class="statistics">
@@ -99,25 +100,26 @@
 											<span class="icon solid fa-pencil-alt"></span>
 											<a href="hci2/lowfi.pdf" class="button fit">Low-Fi</a>
 										</li>
+										<li class="style1">
+											<span class="icon solid fa-clipboard-check"></span>
+											<a href="hci2/usability_testing.pdf" class="button fit">Usability Testing</a>
+										</li>
+
 										<li class="style4">
 											<span class="icon solid fa-paint-brush"></span>
 											<a href="hci2/mediumfi.pdf" class="button fit">Medium-Fi v1</a>
 										</li>
-										<li class="style5">
+										<li class="style4">
 											<span class="icon solid fa-paint-brush"></span>
 											<a href="hci2/mediumfiv2.pdf" class="button fit">Medium-Fi v2</a>
 										</li>
-										<li class="style1">
+										<li class="style5">
 											<span class="icon solid fa-laptop-code"></span>
 											<a href="hci2/hifi.pdf" class="button fit">High-Fi v1</a>
 										</li>
-										<li class="style2">
+										<li class="style5">
 											<span class="icon solid fa-laptop-code"></span>
 											<a href="hci2/hifiv2.pdf" class="button fit">High-Fi v2</a>
-										</li>
-										<li class="style3">
-											<span class="icon solid fa-clipboard-check"></span>
-											<a href="hci2/usability_testing.pdf" class="button fit">Usability Testing</a>
 										</li>
 									</ul>
 								</div>
@@ -154,6 +156,7 @@
 								<header class="major">
 									<h2>Demo</h2>
 								</header>
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/tpKyzMR9KiQ?si=gqyDDzRprJxhJI-q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button primary">Get Started</a></li>
