--- a/sonare/index.html
+++ b/sonare/index.html
@@ -11,6 +11,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<style>
+			#logo {
+				width: 250px;
+				height: auto;
+			}
+		
+		</style>
 	</head>
 	<body class="is-preload">
 
@@ -19,7 +26,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.svg" alt="" /></span>
+						<span class="logo"><img id="logo" src="assets/logo.webp" alt="" /></span>
 						<h1>Sonare</h1>
 						<p>A platform for musicians to connect with each other.</p>
 					</header>
@@ -28,9 +35,10 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">About</a></li>
 							<li><a href="#second">Slides</a></li>
 							<li><a href="#cta">Demo</a></li>
+							<li><a href="#first">About</a></li>
+
 						</ul>
 					</nav>
 
@@ -46,39 +54,13 @@
 										</header>
 										<p>Sonare is a comprehensive platform that not only tracks individual progress but also allows for mixing tracks, sharing music sheets, and community engagement.</p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
 									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									<span class="image"><img src="assets/logo.webp" alt="" /></span>
 								</div>
 							</section>
 
 						<!-- First Section -->
-							<section id="first" class="main special">
-								<header class="major">
-									<h2>About</h2>
-                                    <h3>Meet the team</h3>
-								</header>
-								<ul class="features">
-									<li>
-										<span class="icon solid major style1 fa-code"></span>
-										<h3>Bianca </h3>
-									</li>
-									<li>
-										<span class="icon major style3 fa-copy"></span>
-										<h3>Brian</h3>
-									</li>
-									<li>
-										<span class="icon major style5 fa-gem"></span>
-										<h3>Carlos</h3>
-									</li>
-								</ul>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
-							</section>
 
 						<!-- Second Section -->
 							<section id="second" class="main special">
@@ -159,8 +141,31 @@
                                 <iframe width="560" height="315" src="https://www.youtube.com/embed/tpKyzMR9KiQ?si=gqyDDzRprJxhJI-q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
+									</ul>
+								</footer>
+							</section>
+							<section id="first" class="main special">
+								<header class="major">
+									<h2>About</h2>
+                                    <h3>Meet the team</h3>
+								</header>
+								<ul class="features">
+									<li>
+										<span class="icon solid major style1 fa-code"></span>
+										<h3>Bianca </h3>
+									</li>
+									<li>
+										<span class="icon major style3 fa-copy"></span>
+										<h3>Brian</h3>
+									</li>
+									<li>
+										<span class="icon major style5 fa-gem"></span>
+										<h3>Carlos</h3>
+									</li>
+								</ul>
+								<footer class="major">
+									<ul class="actions special">
+<!--										<li><a href="generic.html" class="button">Learn More</a></li>-->
 									</ul>
 								</footer>
 							</section>
