--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <br>
     <a href="./lin_alg_game_theory.pdf">math401</a>
     <br>
+    <a href="./cfr">ee4021</a>
+    <br>
     <a href= "./sonare/index.html">hci</a>
     <br>
     </div>
