--- a/sonare/index.html
+++ b/sonare/index.html
@@ -52,7 +52,10 @@
 										<header class="major">
 											<h2>What is Sonare?</h2>
 										</header>
-										<p>Sonare is a comprehensive platform that not only tracks individual progress but also allows for mixing tracks, sharing music sheets, and community engagement.</p>
+										<p>Value Proposition: Sonare enhances musical practice through community engagement and collaborative tools.</p>
+										<p>Sonare is a comprehensive platform that not only tracks individual progress but also allows for mixing tracks, sharing music sheets, and community engagement.
+										Users are able to collaborate and share their musical creations with the world. Practice and gain inspiration on Sonare! </p>
+
 										<ul class="actions">
 										</ul>
 									</div>
@@ -151,16 +154,21 @@
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon solid major style1 fa-code"></span>
-										<h3>Bianca </h3>
+											<img src="assets/bianca.png" alt="Bianca" style="width: 150px; height: 150px; border-radius: 50%; object-fit: cover;">
+										<h3>Bianca</h3>
+										<p>Designer: Bianca is an undergraduate student at the National Taiwan University.</p>
+
 									</li>
 									<li>
-										<span class="icon major style3 fa-copy"></span>
+											<img src="assets/brian.png" alt="Brian" style="width: 150px; height: 150px; border-radius: 50%; object-fit: cover;">
 										<h3>Brian</h3>
+
+										<p>Backend: Brian is an undergraduate student at the University of Maryland.</p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-gem"></span>
+											<img src="assets/carlos.png" alt="Carlos" style="width: 150px; height: 150px; border-radius: 50%; object-fit: cover;">
 										<h3>Carlos</h3>
+										<p>Frontend: Carlos is a graduate student at the National Taiwan University.</p>
 									</li>
 								</ul>
 								<footer class="major">
