--- a/sonare/index.html
+++ b/sonare/index.html
@@ -141,7 +141,7 @@
 								<header class="major">
 									<h2>Demo</h2>
 								</header>
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/tpKyzMR9KiQ?si=gqyDDzRprJxhJI-q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/mTOxzvlkw7I?si=2zI72PTfG_0PdBgo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 								<footer class="major">
 									<ul class="actions special">
 									</ul>
